# Basic-Lite-Interpreter

./: .gitignore  AUTOPALYA.md  BASIC.md  CMakeLists.txt  Computer.cpp  Computer.h  GotoInstruction.cpp  GotoInstruction.h  IfInstruction.cpp  IfInstruction.h  Instruction.cpp  Instruction.h  LICENSE  LetInstruction.cpp  LetInstruction.h  List.h  PrintInstruction.cpp  PrintInstruction.h  README.md  ReadInstruction.cpp  ReadInstruction.h  Register.cpp  Register.h  main.cpp
Documentation/: BASIC.md  DevDoc.md  Documentation.md  Plan.md  Skeleton.md  Specification.md  Usefull.md  UserDocumentation.md
Full Project/: CMakeLists.txt  main.cpp
Full Project/include/compiler/: Computer.h  Expression.h  Instruction.h  LetInstruction.h  PrintInstruction.h  ReadInstruction.h  Register.h
Full Project/include/exceptions/: CompileError.h  SyntaxError.h  UniqueError.h
Full Project/include/interface/: Command.h  IDE.h  ListCommand.h
Full Project/src/compiler/: Computer.cpp  Expression.cpp  GotoInstruction.cpp  IfInstruction.cpp  Instruction.cpp  LetInstruction.cpp  PrintInstruction.cpp  ReadInstruction.cpp  Register.cpp
Full Project/src/interface/: Command.cpp  EndCommand.cpp  HelpCommand.cpp  IDE.cpp  ListCommand.cpp  LoadCommand.cpp  NewCommand.cpp  RunCommand.cpp  SaveCommand.cpp
Project Jporta/: CMakeLists.txt  Command.h  CompileError.h  Computer.cpp  Computer.h  DevDoc.md  EndCommand.h  GotoInstruction.cpp  GotoInstruction.h  IDE.cpp  IDE.h  IfInstruction.cpp  IfInstruction.h  Instruction.cpp  Instruction.h  LetInstruction.cpp  LetInstruction.h  ListCommand.h  LoadCommand.cpp  NewCommand.cpp  PrintInstruction.cpp  ReadInstruction.cpp  ReadInstruction.h  Register.cpp  Register.h  RunCommand.h  SaveCommand.cpp  UniqueError.h  main.cpp
Project files/: Command.cpp  DevDoc.md  EndCommand.cpp  GotoInstruction.cpp  HelpCommand.cpp  HelpCommand.h  IDE.cpp  IDE.h  Instruction.cpp  LetInstruction.h  ListCommand.cpp  LoadCommand.h  NewCommand.h  PrintInstruction.cpp  PrintInstruction.h  ReadInstruction.h  RunCommand.cpp  SaveCommand.h  SyntaxError.h  main.cpp
Skeleton/: CMakeLists.txt  Command.h  CompileError.h  Computer.h  EndCommand.h  GotoInstruction.h  HelpCommand.h  IDE.h  Instruction.h  LetInstruction.h  LoadCommand.h  NewCommand.h  RunCommand.h  SaveCommand.h  SyntaxError.h  UniqueError.h  main.cpp
include/: Command.h  Computer.h  GotoInstruction.h  IDE.h  IfInstruction.h  Instruction.h  LetInstruction.h  List.h  List.hpp  PrintInstruction.h  ReadInstruction.h  Register.h
include/compiler/: Computer.h  GotoInstruction.h  IfInstruction.h  Instruction.h  LetInstruction.h  ReadInstruction.h  Register.h
include/exceptions/: CompileError.h  SyntaxError.h  UniqueError.h
include/interface/: Command.h  EndCommand.h  HelpCommand.h  IDE.h  ListCommand.h  LoadCommand.h  NewCommand.h  RunCommand.h  SaveCommand.h
src/: Command.cpp  Computer.cpp  GotoInstruction.cpp  IDE.cpp  IfInstruction.cpp  Instruction.cpp  LetInstruction.cpp  PrintInstruction.cpp  ReadInstruction.cpp  Register.cpp
src/compiler/: Computer.cpp  GotoInstruction.cpp  IfInstruction.cpp  Instruction.cpp  LetInstruction.cpp  PrintInstruction.cpp  ReadInstruction.cpp  Register.cpp
src/interface/: Command.cpp  IDE.cpp  ListCommand.cpp  RunCommand.cpp  SaveCommand.cpp
